--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -753,9 +753,23 @@
   border-radius: 4px;
   padding: 5px;
   margin-top: 8px;
+  position: relative;
+
+  .status__avatar {
+    height: 18px;
+    width: 18px;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    cursor: default;
+  }
 
   .display-name__account {
     color: #606984;
+  }
+
+  .display-name {
+    padding-left: 20px;
   }
 }
 
