--- a/app/views/stream_entries/_quote_status.html.haml
+++ b/app/views/stream_entries/_quote_status.html.haml
@@ -1,5 +1,8 @@
 .status.light.quote-status{ dataurl:  TagManager.instance.url_for(status) }
   .status__header
+    .status__avatar
+      %div
+        = image_tag status.account.avatar(:original), width: 18, height: 18, alt: '', class: 'u-photo'
     %span.display-name
       %strong.p-name.emojify= display_name(status.account)
       %span= acct(status.account)
