--- a/app/views/stream_entries/_quote_status.html.haml
+++ b/app/views/stream_entries/_quote_status.html.haml
@@ -4,7 +4,7 @@
       %div
         = image_tag status.account.avatar(:original), width: 18, height: 18, alt: '', class: 'u-photo'
     %span.display-name
-      %strong.p-name.emojify= display_name(status.account)
+      %strong.p-name.emojify= display_name(status.account, custom_emojify: true)
       %span= acct(status.account)
 
   .status__content.p-name.emojify<
