add account profile link

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -741,7 +741,12 @@
     position: absolute;
     top: 5px;
     left: 5px;
-    cursor: default;
+    cursor: pointer;
+
+    & > div {
+      width: 18px;
+      height: 18px;
+    }
   }
 
   .display-name__account {
