add hashtag-temp feature

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -325,6 +325,7 @@
   }
 
   .autosuggest-textarea__textarea,
+  .hastag-temp__input,
   .spoiler-input__input {
     display: block;
     box-sizing: border-box;
