--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -5477,13 +5477,12 @@ noscript {
   font-size: 12px;
 
   .hastag-temp__input {
-    padding-left: 0;
+    padding-left: 3px;
     font-size: 12px;
     border-radius: 0 0 4px;
   }
 
-  .fa-hashtag {
-    color: rgba($ui-base-color, 0.7);
-    padding-left: 5px;
+  .hashtag-temp__button-icon {
+    padding: 0 3px;
   }
 }
