--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -863,8 +863,8 @@
     height: 18px;
     width: 18px;
     position: absolute;
-    top: 5px;
-    left: 5px;
+    top: 5px !important;
+    left: 5px !important;
     cursor: pointer;
 
     & > div {
