--- a/app/views/stream_entries/_quote_status.html.haml
+++ b/app/views/stream_entries/_quote_status.html.haml
@@ -2,7 +2,7 @@
   = link_to TagManager.instance.url_for(status.account), class: 'status__display-name p-author h-card', target: stream_link_target, rel: 'noopener' do
     .status__avatar
       %div
-        = image_tag status.account.avatar(:original), width: 18, height: 18, alt: '', class: 'u-photo'
+        = image_tag status.account.avatar(:original), width: 18, height: 18, alt: '', class: 'account__avatar u-photo'
     %span.display-name
       %strong.p-name.emojify= display_name(status.account, custom_emojify: true)
       %span= acct(status.account)
