--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -935,9 +935,21 @@
   & > .unlisted-quote {
     color: $dark-text-color;
     font-weight: 500;
+
+    & > button {
+      color: $dark-text-color;
+      font-size: 100%;
+      background-color: transparent;
+      border: 0;
+      cursor: pointer;
+      outline: none;
+      padding: 0;
+      appearance: none;
+    }
   }
 
-  .status__avatar, .detailed-status__display-avatar {
+  .status__avatar,
+  .detailed-status__display-avatar {
     height: 18px;
     width: 18px;
     position: absolute;
@@ -960,7 +972,8 @@
   }
 
   .detailed-status__display-name {
-      strong, span {
+    strong,
+    span {
       display: inline;
     }
   }
